fix: Log auth events for OIDC login failure and success (#7233)